# OpenCV-C

./: .gitignore  CMakeLists.txt
